--- a/Main.css
+++ b/Main.css
@@ -1,118 +1,25 @@
-brianna
-body {
-	height: 100%;
-	margin: 0;
-	text-align: center;
-	width: 100%;
+/* Remove the navbar's default margin-bottom and rounded borders */
+.navbar {
+  color: Purple;
+  margin-bottom: 0;
+  border-radius: 0;
 }
 
-h1 {
-	font-size: 32px;
-  font-family: Palatino, 'platino linotype', serif;
-  color: DarkTurquoise;
+/* Add a gray background color and some padding to the footer */
+footer {
+  background-color: #Purple;
+  padding: 25px;
 }
 
-h2 {
-	font-size: 56px;
+.carousel-inner img {
+  width: 100%; /* Set width to 100% */
+  margin: auto;
+  min-height:200px;
 }
 
-
-.hero a {
-	padding: 300px 0;
-	margin: 30px;
-  font-family: 'Trebuchet MS', Helvetica, sans-serif;
+/* Hide the carousel text when the screen is less than 600 pixels wide */
+@media (max-width: 600px) {
+.carousel-caption {
+  display: none;
 }
-
-
-.hero p {
- font-size: 2rem;
 }
-
-.hero a {
-	color: #00FFAA;
-	font-size: 1.25em;
-	text-decoration: none;
-}
-
-
-html, body {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  font-weight: 300;
-  line-height: 1.5;
-}
-
-body {
-  font-family: 'Lato', sans-serif;
-  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/background.jpg');
-  background-position: center top;
-  background-size: cover;
-  margin: 0;
-}
-
-.page-title {
-  text-align: center;
-  font-weight: 100;
-}
-
-.page-description {
-  border: 1px solid #000;
-  text-align: center;
-  padding: 30px;
-}
-
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.gallery-item {
-  margin: 20px;
-  border: 5px solid #FFF;
-}
-
-.gallery-item .thumbnail {
-
-}
-
-/* FOOTER NAVIGATION */
-
-nav {
-  background-color: #FFF;
-}
-
-nav li {
-  margin: 0;
-  padding: 0 10px;
-}
-
-nav ul {
-  display: inline;
-}
-
-.contact-btn {
-
-}
-
-.contact-btn a {
-  margin-right: 30px;
-  padding: 8px 18px;
-  border: 1px solid #204156;
-
-}
-
-.contact-btn a:active {
-  position: relative;
-  bottom: 2px;
-}
-
-nav a {
-  height: 60px;
-  line-height: 60px;
-  color: #204156;
-  text-decoration: none;
-}
-brianna check
