--- a/Main.css
+++ b/Main.css
@@ -4,29 +4,29 @@
   margin-bottom: 0;
   border-radius: 0;
   text-emphasis-color: yellow;
-  column-rule-color: orange
+  color: black;
 }
 
 /* Add a gray background color and some padding to the footer */
 footer {
   background-color: orange;
   text-decoration-color: black;
-  padding: 10px;
+  padding: 20px;
 }
 
 .carousel-inner img {
   width: 100%; /* Set width to 100% */
   margin: auto;
-  min-height:50px;
-  max-height: 700px;
+  max-height: 600px;
+  object-fit: cover;
 }
 
-.carousel-text {
-  color: white;
-  text-shadow: black;
-  text-align-last: center;
-  text-decoration-style: double;
+.project.img {
+object-fit: cover;
+width: 100%;
+max-height: 200px;
 }
+
 /* Hide the carousel text when the screen is less than 600 pixels wide */
 @media (max-width: 800px) {
 .carousel-caption {
