--- a/Main.css
+++ b/Main.css
@@ -1,9 +1,8 @@
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
-  margin-bottom: 0;
-  border-radius: 0;
-  text-emphasis-color: yellow;
   color: orange;
+  margin-bottom: 100;
+  border-radius: 100;
 }
 
 body {
@@ -13,15 +12,14 @@ body {
 
 /* Add a gray background color and some padding to the footer */
 footer {
-  background-color: orange;
-  text-decoration-color: black;
-  padding: 20px;
-  color: orange;
+  padding: 100px;
+  color: black;
 }
 
 .carousel-inner img {
   width: 100%; /* Set width to 100% */
   margin: auto;
+  text-color: black;
   max-height: 600px;
   object-fit: cover;
 }
