--- a/Main.css
+++ b/Main.css
@@ -6,7 +6,8 @@
 }
 
 body {
-  background: url(https://i.pinimg.com/originals/b8/1e/3b/b81e3bd562da73817114b537b9daa7b7.jpg) no-repeat;
+  background: url(https://i.pinimg.com/originals/b8/1e/3b/b81e3bd562da73817114b537b9daa7b7.jpg)
+  no-repeat;
   background-size: 100% 100%;
 }
 
